--- a/Shopper.html
+++ b/Shopper.html
@@ -10,29 +10,32 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
     <link rel="stylesheet" href="style.css">
     <style type="text/css">
-        main .login{
+        main .login {
             margin-top: 100px;
             position: absolute;
             top: 50%;
             left: 50%;
             width: 400px;
             padding: 40px;
-            transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
             background: rgba(0, 0, 0, .6);
             box-sizing: border-box;
             box-shadow: 0 15px 25px rgba(0, 0, 0, .8);
             border-radius: 10px;
         }
-        .login h2{
+
+        .login h2 {
             margin: 0 0 30px;
             padding: 0;
             color: #fff;
             text-align: center;
         }
-        .login .user{
+
+        .login .user {
             position: relative;
         }
-        .login .user input{
+
+        .login .user input {
             width: 100%;
             padding: 10px 0;
             font-size: 16px;
@@ -43,14 +46,16 @@
             outline: none;
             background: transparent;
         }
+
         .login .user input:valid+label,
-        .login .user input:focus+label{
+        .login .user input:focus+label {
             top: -20%;
-            left:0;
+            left: 0;
             color: #03e9f4;
             font-size: 12px;
         }
-        .login form a{
+
+        .login form a {
             position: relative;
             display: inline-block;
             padding: 10px 20px;
@@ -63,79 +68,115 @@
             margin-top: 40px;
             letter-spacing: 4px;
         }
-        .login form a:hover{
+
+        .login form a:hover {
             background: #03e9f4;
             color: #fff;
             border-radius: 5px;
             box-shadow: 0 0 5px #03e9f4,
-                        0 0 25px #03e9f4,
-                        0 0 50px #03e9f4,
-                        0 0 100px #03e9f4;
+                0 0 25px #03e9f4,
+                0 0 50px #03e9f4,
+                0 0 100px #03e9f4;
         }
-        .login form a span{
+
+        .login form a span {
             position: absolute;
             display: block;
         }
-        .login form a span:nth-child(1){
+
+        .login form a span:nth-child(1) {
             top: 0;
             left: -100%;
             width: 100%;
             height: 2px;
-            background: linear-gradient(90deg,transparent,#03e9f4);
+            background: linear-gradient(90deg, transparent, #03e9f4);
             animation: btn-anim1 1s linear infinite;
         }
+
         @keyframes btn-anim1 {
-            0%{left:-100%;}
-            50%,100%{left: 100%;}
+            0% {
+                left: -100%;
+            }
+
+            50%,
+            100% {
+                left: 100%;
+            }
         }
-        .login a span:nth-child(2){
+
+        .login a span:nth-child(2) {
             top: -100%;
             right: 0;
             width: 2px;
             height: 100%;
-            background: linear-gradient(180deg,transparent,#03e9f4);
+            background: linear-gradient(180deg, transparent, #03e9f4);
             animation: btn-anim2 1s linear infinite;
             animation-delay: .25s;
         }
+
         @keyframes btn-anim2 {
-            0%{top:-100%;}
-            50%,100%{top: 100%;}
+            0% {
+                top: -100%;
+            }
+
+            50%,
+            100% {
+                top: 100%;
+            }
         }
-        .login a span:nth-child(3){
+
+        .login a span:nth-child(3) {
             bottom: 0;
             right: -100%;
             width: 100%;
             height: 2px;
-            background: linear-gradient(270deg,transparent,#03e9f4);
+            background: linear-gradient(270deg, transparent, #03e9f4);
             animation: btn-anim3 1s linear infinite;
             animation-delay: .5s;
         }
+
         @keyframes btn-anim3 {
-            0%{right:-100%;}
-            50%,100%{right: 100%;}
+            0% {
+                right: -100%;
+            }
+
+            50%,
+            100% {
+                right: 100%;
+            }
         }
-        .login a span:nth-child(4){
+
+        .login a span:nth-child(4) {
             bottom: -100%;
             left: 0;
             width: 2px;
             height: 100%;
-            background: linear-gradient(360deg,transparent,#03e9f4);
+            background: linear-gradient(360deg, transparent, #03e9f4);
             animation: btn-anim4 1s linear infinite;
             animation-delay: .75s;
         }
+
         @keyframes btn-anim4 {
-            0%{bottom:-100%;}
-            50%,100%{bottom: 100%;} 
+            0% {
+                bottom: -100%;
+            }
+
+            50%,
+            100% {
+                bottom: 100%;
+            }
         }
-        .a{
+
+        .a {
             margin-top: 8px;
         }
-        .b{
+
+        .b {
             display: block;
             margin-top: 30px;
         }
     </style>
-    
+
 </head>
 
 <body>
@@ -154,9 +195,9 @@
 
         <nav id="icon">
             <input type="search" class="z" value="Search">
-            <span class="bi bi-bell"></span>
-            <span class="bi bi-heart"></span>
-            <span class="bi bi-cart4">
+            <span>🔔</span>
+            <span>❤️</span>
+            <span>🛒
                 <span class="count">2</span>
             </span>
         </nav>
@@ -166,9 +207,7 @@
     <div class="flash-sale">
         <marquee>
             <article>
-                <span class="bi bi-lightning-fill"></span>
-                <span> Happy hour sale</span>
-                <span class="bi bi-lightning-fill"></span>
+                <span>⚡Happy hour sale⚡</span>
             </article>
         </marquee>
     </div>
@@ -202,10 +241,29 @@
         <div>
             <span class="brand">Shopper.</span>
             <aside>
-                <a class="fb" href="https://facebook.com"><span class="bi bi-facebook"></span></a>
-                <a class="insta" href="https://instagram.com"><span class="bi bi-instagram"></span></a>
-                <a class="yt" href="https://youtube.com"><span class="bi bi-youtube"></span></a>
-                <a class="x" href="https://x.com"><span class="bi bi-twitter-x"></span></a>
+                <a class="fb" href="https://facebook.com"><span class="bi bi-facebook"><svg
+                            xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                            class="bi bi-facebook" viewBox="0 0 16 16">
+                            <path
+                                d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951" />
+                        </svg></span></a>
+                <a class="insta" href="https://instagram.com"><span class="bi bi-instagram"><svg
+                            xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                            class="bi bi-instagram" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
+                        </svg></span></a>
+                <a class="yt" href="https://youtube.com"><span class="bi bi-youtube"><svg
+                            xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                            class="bi bi-youtube" viewBox="0 0 16 16">
+                            <path
+                                d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z" />
+                        </svg></span></a>
+                <a class="x" href="https://x.com"><span class="bi bi-twitter-x"><svg xmlns="http://www.w3.org/2000/svg"
+                            width="22" height="22" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+                            <path
+                                d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z" />
+                        </svg></span></a>
             </aside>
         </div>
         <div class="data">
@@ -213,7 +271,7 @@
             <span>Contact Us</span>
             <span>FAQs</span>
             <span>Size Guide</span>
-            <span>Shipping & Return</span> 
+            <span>Shipping & Return</span>
         </div>
         <div class="data">
             <div>SHOP</div>
