--- a/UniqueFashion.html
+++ b/UniqueFashion.html
@@ -196,7 +196,7 @@
         <nav id="icon">
             <input type="search" class="z" value="Search">
             <span>🔔</span>
-            <span>❤️</span>
+            <span>🖤🤍</span>
             <span>🛒
                 <span class="count">2</span>
             </span>
